--- a/publish.html
+++ b/publish.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cbff57c9-e4d6-40ed-b587-183bfa055db1" type="text/javascript" async></script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YEGDTZJ1YJ"></script>
 <script>
