--- a/search.html
+++ b/search.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cbff57c9-e4d6-40ed-b587-183bfa055db1" type="text/javascript" async></script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YEGDTZJ1YJ"></script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FB0FG685ZM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-YEGDTZJ1YJ');
+  gtag('config', 'G-FB0FG685ZM');
 </script>
 <script src="https://unpkg.com/lucide@latest"></script>
 
